AX: table cells that use display:block render the table inaccessible to VoiceOver https://bugs.webkit.org/show_bug.cgi?id=143007

Reviewed by Mario Sanchez Prada.

Source/WebCore:

When display:block is used on a table cell, it was being ignored because it was anonymous.
This is still a valid scenario however if it's still inside of a valid table.

Test: accessibility/table-cell-display-block.html

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::computeAccessibilityIsIgnored):

LayoutTests:

* accessibility/table-cell-display-block-expected.txt: Added.
* accessibility/table-cell-display-block.html: Added.


Canonical link: https://commits.webkit.org/161097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181988 268f45cc-cd09-0410-ab3c-d52691b4dbfc